--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ html {
 }
 
 body {
-  /* font-family: 'Nunito', sans-serif; */
   font-family: 'Odibee Sans', cursive;
   letter-spacing: 2px;
   font-weight: 400;
@@ -102,7 +101,7 @@ main {
   text-transform: uppercase;
   margin-bottom: 1rem;
   font-size: 1.7rem;
-  color: #ddd;
+  color: white;
 }
 
 .current-score {
@@ -117,7 +116,6 @@ main {
   color: #444;
   background: none;
   border: none;
-  font-family: inherit;
   font-size: 1.8rem;
   text-transform: uppercase;
   cursor: pointer;
@@ -132,12 +130,6 @@ main {
   box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1);
 }
 
-.btn::first-letter {
-  font-size: 2.4rem;
-  display: inline-block;
-  margin-right: 0.7rem;
-}
-
 .btn--new {
   top: 4rem;
 }
@@ -149,8 +141,9 @@ main {
 }
 
 i {
-  margin-right: 3px;
+  margin-right: 10px;
   font-size: 2rem;
+  color: #00ADB5;
 }
 
 .btn:active {
