--- a/style.css
+++ b/style.css
@@ -29,13 +29,13 @@ h1 {
   top: 8%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 10;
+  z-index: 5;
 }
 
 main {
   position: relative;
-  width: 100rem;
-  height: 60rem;
+  width: 65vw;
+  height: 75vh;
   background-color: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(200px);
   filter: blur();
@@ -100,7 +100,7 @@ main {
 .current-label {
   text-transform: uppercase;
   margin-bottom: 1rem;
-  font-size: 1.7rem;
+  font-size: 1.7vw;
   color: white;
 }
 
@@ -125,7 +125,7 @@ main {
   background-color: rgba(255, 255, 255, 0.8);
   backdrop-filter: blur(10px);
 
-  padding: 0.7rem 2.5rem;
+  padding: 0.7rem 2rem;
   border-radius: 50rem;
   box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1);
 }
