--- a/style.css
+++ b/style.css
@@ -21,6 +21,68 @@ body {
   justify-content: center;
 }
 
+/* CLASSES TO MAKE MODAL WORK */
+.hidden {
+  display: none;
+}
+
+h2 {
+  margin-bottom: 40px;
+  font-family: 'Odibee Sans', cursive;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-height: 95vh;
+  width: 100%;
+  max-width: 90vw;
+
+  font-family: 'Nunito', sans-serif;
+  font-size: 1.8rem;
+  background-color: white;
+  padding: 8vh 6vw;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+  z-index: 10;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 5;
+}
+
+.show-modal {
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 1.75rem 3.5rem;
+  margin: 5rem 2rem;
+  border: none;
+  background-color: #fff;
+  color: #444;
+  border-radius: 10rem;
+  cursor: pointer;
+}
+
+.close-modal {
+  position: absolute;
+  top: 1.2rem;
+  right: 2rem;
+  font-size: 5rem;
+  color: #333;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
 /* LAYOUT */
 h1 {
   font-size: 3rem;
@@ -112,6 +174,7 @@ main {
 
 /* ABSOLUTE POSITIONED ELEMENTS */
 .btn {
+  font-family: 'Nunito', sans-serif;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -143,9 +206,38 @@ main {
 }
 
 i {
-  margin-right: 10px;
+  margin-right: 2px;
   font-size: 2rem;
   color: #00ADB5;
+}
+
+.button-hovered {
+  margin-right: 8px;
+  transition: all 0.5s;
+}
+
+.button-unhovered {
+  margin-right: 2px;
+  transition: all 0.5s;
+}
+
+.info {
+  font-size: 2rem;
+  position: absolute;
+  color: rgba(255, 255, 255, 0.7);
+  cursor: pointer;
+}
+
+.info-hovered {
+  color: white;
+  font-size: 2.4rem;
+  transition: all 0.5s;
+}
+
+.info-unhovered {
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 2rem;
+  transition: all 0.5s;
 }
 
 .btn:active {
@@ -210,5 +302,11 @@ i {
   }
   .dice--2 {
     transform: translate(-50%, -50%);
+  }
+}
+
+@media all and (min-width: 1080px) {
+  .modal {
+    width: 60%;
   }
 }
